# uav_geometric_controller

./: .gitignore  CMakeLists.txt  README.md  jetson_init.sh  package.xml  setup_custom_pythonpath.sh
arduino/ADC/: ADC.ino
cfg/: DynConf.cfg
config/: Gains.cfg  calibration.cfg  gains.cfg  reconfigure.cfg
documentation/: node_schematics.odg
include/odroid/: AUX_Functions.h  (+22 more)
launch/: arduino.launch  base_station.launch  camera.launch  camera_driver.launch  depth_proc.launch  empty_gazebo.launch  gazebo.launch  imu.launch  imu_jetson.launch  imu_transform.launch  jetson_moca.launch  jetson_moca_M0.launch  laser_filter.launch  moca.launch  moca_bag.launch  moca_jetson.launch  nodelet.launch  odroid.launch  odroid_gazebo.launch  odroid_moca.launch  openni2.launch  openni2_driver.launch  openni2_interpreter.launch  openni2_original.launch  simple_world_gazebo.launch  spawn_quadrotor.launch  spherical_gazebo.launch  spherical_spawn_quadrotor.launch  start.launch  test.launch  test_imu.launch  test_model.launch
msg/: DAQ.msg  error.msg  state.msg  states.msg  trajectory.msg
params/: controller.yaml  jetsonAfro.yaml  jetson_controller.yaml  jetson_controller_1_5kg.yaml  jetson_controller_2kg.yaml  laser_config.yaml
robot_description/: imu.sdf  model.config  quad.STL  quad.urdf  test_imu.sdf
rviz/: octomap.rviz
scripts/: OccGrid_to_array.py  arduino.py  arduino_daq.py  bag_parser.py  camera_comparison.py  error_monitor.py  estimator.py  example_stream.py  exploration_to_trajectory.py  filter_imu.py  get_param.py  i2c.py  imu.py  imu2uav.py  key_direct.py  key_tool.py  mock_pub.py  monitor.py  rgbd_laser_subscriber.py  rosbag  sense.py  serial_node.py  server.py  system_data.txt  test.py  traitsGUI.py  trajectory_cmd.py  vizualization.py
setup/: ros_install.bash  setup.bash
src/: calibration.cpp  controller.cpp  controller_sep.cpp  hw_interface.cpp  node.cpp  odroid_node.cpp  odroid_sense.cpp  sensor.cpp  sim_vicon.cpp  uav.cpp  visualize.cpp
test/: test_controller.cpp
worlds/: mesh.world  simple_world.world  test_imu.world
(+26 files in other folders)
